Fixed register back btn + "Toggling" edit btn

--- a/furniture_Sales_Management/src/Interface/ProfilePage.form
+++ b/furniture_Sales_Management/src/Interface/ProfilePage.form
@@ -46,9 +46,9 @@
                   <Component id="PassTxt" max="32767" attributes="0"/>
               </Group>
               <EmptySpace pref="99" max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="BackBtn" min="-2" pref="79" max="-2" attributes="0"/>
-                  <Component id="EditBtn" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="BackBtn" pref="79" max="32767" attributes="0"/>
+                  <Component id="EditBtn" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
           </Group>
