-feat: customer registration
added registration for customer records

--- a/furniture_Sales_Management/src/Interface/CreateSalesOrder.form
+++ b/furniture_Sales_Management/src/Interface/CreateSalesOrder.form
@@ -200,6 +200,9 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tfCustomerActionPerformed"/>
       </Events>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="0"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JComboBox" name="cbFurniture">
       <Properties>
