--- a/furniture_Sales_Management/src/Interface/MainPage.form
+++ b/furniture_Sales_Management/src/Interface/MainPage.form
@@ -99,7 +99,7 @@
               <Group type="102" attributes="0">
                   <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
                   <Component id="jobMainbtn" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="402" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Component id="LogoutBtn" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
               </Group>
@@ -109,10 +109,7 @@
                           <Component id="rolelbl" min="-2" pref="36" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                       </Group>
-                      <Group type="102" alignment="1" attributes="0">
-                          <Component id="ProfileBtn" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="ProfileBtn" alignment="1" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
                   <Component id="Tabs" min="-2" pref="451" max="-2" attributes="0"/>
@@ -190,7 +187,7 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="Interface.SalesOrderPage" name="salesOrderPage11">
+            <Component class="Interface.SalesOrderPage" name="salesOrderPage">
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new Interface.SalesOrderPage(this)"/>
               </AuxValues>
@@ -202,7 +199,7 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="Interface.SearchSalesOrder" name="searchSalesOrder1">
+            <Component class="Interface.SearchSalesOrder" name="searchSalesOrder">
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new Interface.SearchSalesOrder(this)"/>
               </AuxValues>
@@ -214,9 +211,10 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="Interface.CreateSalesOrder1" name="createSalesOrder11">
+            <Component class="Interface.CreateSalesOrder" name="createSalesOrder">
               <AuxValues>
-                <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new Interface.CreateSalesOrder1(this)"/>
+                <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new Interface.CreateSalesOrder(this)"/>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="0"/>
               </AuxValues>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
@@ -226,7 +224,7 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="Interface.DeleteSalesOrder" name="deleteSalesOrder1">
+            <Component class="Interface.DeleteSalesOrder" name="deleteSalesOrder">
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new Interface.DeleteSalesOrder(this)"/>
               </AuxValues>
@@ -238,7 +236,7 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="Interface.ModifySalesOrder" name="modifySalesOrder1">
+            <Component class="Interface.ModifySalesOrder" name="modifySalesOrder">
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new Interface.ModifySalesOrder(this)"/>
               </AuxValues>
@@ -250,14 +248,14 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="Interface.PersonalSales" name="personalSales2">
+            <Component class="Interface.PersonalSales" name="personalSales">
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new Interface.PersonalSales(this)"/>
               </AuxValues>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                  <JTabbedPaneConstraints tabName="tab9">
-                    <Property name="tabTitle" type="java.lang.String" value="tab9"/>
+                  <JTabbedPaneConstraints tabName="Sales List">
+                    <Property name="tabTitle" type="java.lang.String" value="Sales List"/>
                   </JTabbedPaneConstraints>
                 </Constraint>
               </Constraints>
